--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@angular/platform-browser": "9.0.6",
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
-    "primeng": "9.0.3",
+    "primeflex": "1.1.0",
+    "primeicons": "2.0.0",
+    "primeng": "9.1.0",
+    "quill": "1.3.7",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
