--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
     "primeflex": "1.1.0",
-    "primeicons": "2.0.0",
-    "primeng": "9.1.0",
+    "primeicons": "^4.0.0",
+    "primeng": "^9.1.3",
     "quill": "1.3.7",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
