--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "angular",
+  "name": "qgnirxral.github",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.6",
-    "@angular/common": "9.0.6",
-    "@angular/compiler": "9.0.6",
-    "@angular/core": "9.0.6",
-    "@angular/forms": "9.0.6",
-    "@angular/platform-browser": "9.0.6",
-    "@angular/platform-browser-dynamic": "9.0.6",
-    "@angular/router": "9.0.6",
+    "@angular/animations": "9.0.4",
+    "@angular/cdk": "9.1.0",
+    "@angular/common": "9.0.4",
+    "@angular/compiler": "9.0.4",
+    "@angular/core": "9.0.4",
+    "@angular/forms": "9.0.4",
+    "@angular/platform-browser": "9.0.4",
+    "@angular/platform-browser-dynamic": "9.0.4",
+    "@angular/router": "9.0.4",
+    "@fullcalendar/core": "^4.4.0",
+    "@types/jasmine": "3.3.16",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "8.9.5",
+    "chart.js": "2.9.3",
     "primeflex": "1.1.0",
-    "primeicons": "^4.0.0",
-    "primeng": "^9.1.3",
+    "primeicons": "2.0.0",
+    "primeng": "9.1.0",
     "quill": "1.3.7",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.10.3"
+    "rxjs": "6.5.4",
+    "tslib": "1.11.1",
+    "web-animations-js": "2.3.2",
+    "zone.js": "0.10.2"
   },
   "scripts": {
     "ng": "ng",
@@ -28,24 +35,24 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "9.0.0-rc.7",
-    "@angular/compiler-cli": "9.0.0-rc.7",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular/cli": "~9.1.1",
+    "@angular/compiler-cli": "~9.1.1",
+    "@angular/language-service": "~9.1.1",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   }
 }
